# missile

./: .gitignore  AERO_ACCURACY_UPGRADE.md  AGENTS.md  ARCH_STABILIZE.md  CMakeLists.txt  FIX_PLAN.md  HANDOFF.md  ISSUES.md  LICENSE  PLAN.md  README.md  REPO_SPEC.md  aerodynamics_table.csv.INVALID  build.ps1  build_vs.bat  clean_aero_table.py  hgv_config_optimized.json  hgv_model_optimized.stl  optimize_shape.py  progress.md  quick_check.ps1  run_debug_sim.py  tune_parameters.py
.trae/skills/rm-dart-expert/: SKILL.md
app/: CMakeLists.txt
app/aero_calc/: CMakeLists.txt  main.cpp
app/aero_solver_c/: CMakeLists.txt
app/aero_table_gen/: CMakeLists.txt  main.cpp
app/shape_optimizer/: CMakeLists.txt  main.cpp
app/sim_main/: CMakeLists.txt  main.cpp
docs/: AERO_ACCURACY_UPGRADE.md  ARCHITECTURE.md  ARCH_STABILIZE.md  CPU_ORACLE_DECOMP.md  DEVELOPMENT_LOG.md  ISSUES.md  PIPELINE.md  PLAN.md  README.md  REPO_SPEC.md  progress.md
examples/dart/: CMakeLists.txt  dart_aero_table.hpp  dart_config.hpp  dart_debug.cu  dart_mc.cu  rm_dart_aero_table.hpp  rm_dart_config.hpp  rm_dart_debug.cu  rm_dart_mc.cu  sim.cpp
include/: aerodynamics_model.hpp  atmosphere_model.hpp  common.hpp  constants.hpp  coordinate_transform.hpp  cuda_utils.cuh  dynamics_6dof.hpp  gravity_model.hpp  missile_config.hpp  propulsion_model.hpp  rm_dart_aero.hpp  rm_dart_aero_table.hpp  rm_dart_config.hpp
include/aero/: aerodynamics_model.hpp
include/aero/cfd/: cfd_config.hpp  cfd_mesh.hpp  cfd_residual.hpp  cfd_result.hpp  cfd_solver.hpp  cfd_solver_gpu.hpp  cfd_state.hpp  cuda_utils.hpp  device_mesh.hpp  diagnostics.hpp  element_types.hpp  fgmres.hpp  gpu_buffers.hpp  gpu_communicator.hpp  gpu_solver.hpp  gpu_solver_internal.hpp  gpu_topology.hpp  krylov_ops.hpp  lusgs.hpp  mesh_io.hpp  mesh_io_cgns.hpp  mesh_validator.hpp  partition.hpp  rans.hpp  real.hpp  reconstruction.hpp  viscous.hpp
include/aero/engineering/: aero_skin_friction.hpp  engineering_aero.hpp
include/aero/panel/: aero_solver.hpp
include/aero_cfd/: cfd_config.hpp  cfd_mesh.hpp  cfd_residual.hpp  cfd_result.hpp  cfd_solver.hpp  cfd_state.hpp  cuda_utils.hpp  device_mesh.hpp  diagnostics.hpp  gpu_buffers.hpp  gpu_solver.hpp  gpu_solver_internal.hpp  rans.hpp  real.hpp  reconstruction.hpp  viscous.hpp
include/aero_solver/: aero_skin_friction.hpp  aero_solver.hpp  aero_solver_c_api.h  cfd_solver.hpp  engineering_aero.hpp  mesh_generator.hpp
include/config/: missile_config.hpp
include/gnc/: autopilot.hpp  dart_guidance.hpp  guidance.hpp
include/infra/: common.hpp
include/infra/cuda/: cuda_utils.cuh
include/infra/math/: constants.hpp
include/infra/util/: pid.hpp  progress_bar.hpp  utils.hpp
include/sim/atmosphere/: atmosphere_model.hpp
include/sim/control/: autopilot.hpp  dart_guidance.hpp  guidance.hpp
include/sim/coord/: coordinate_transform.hpp
include/sim/dynamics/: dynamics_6dof.hpp
include/sim/gravity/: gravity_model.hpp
include/sim/propulsion/: propulsion_model.hpp
scripts/: aero_table_gen.py  calibrate_a5.py  check_cfd.ps1
scripts/common/: build_fortran.bat  debug_pandas.py
scripts/dart/: analyze_mc.py  check_guidance.py  find_optimal_launch.py  generate_dart_aero_table.py  generate_rm_dart_model.py  learn_guidance_lookup.py  monte_carlo_dart.py  optimize_dart_geo.py  run_debug_sim.py  scan_control_authority.py  scan_control_authority_gpu.py  scan_two_stage_gpu.py  sweep_guidance.py
scripts/missile/: compare_designs.py  generate_aero_table.py  generate_cone_waverider.py  optimize_shape.py  optimize_trajectory.py  tune_parameters.py  waverider_physics.py
src/: aero_calc_tool.cpp  aero_table_gen.cpp  atmosphere_model.cu  coordinate_transform.cu  dynamics_6dof.cu  gravity_model.cu  main.cpp  missile_config.cpp  nrlmsise00.f  nrlmsise00.lib  rm_dart_debug.cu  rm_dart_mc.cu  rm_dart_sim.cpp  shape_optimizer.cpp
src/aero/: CMakeLists.txt
src/aero/cfd/: cfd_residual.cpp  cfd_residual_gpu.cu  cfd_solver.cpp  cfd_solver_gpu.cpp  cuda_utils.cpp  device_mesh.cu  diagnostics.cpp  exchange_halo.cu  fgmres_gpu.cu  gpu_buffers.cu  gpu_communicator.cpp  gpu_diagnostics.cu  gpu_rans.cu  gpu_solver.cu  gpu_timestep.cu  gpu_topology.cpp  gpu_update.cu  gpu_viscous.cu  gpu_wall.cu  jacobian_free.cu  lusgs_gpu.cu  mesh_io_cgns.cpp  mesh_io_su2.cpp  mesh_metrics.cpp  mesh_validator.cpp  partition.cpp  rans.cpp  reconstruction.cpp  reconstruction_gpu.cu  viscous.cpp
src/aero/panel/: aero_solver.cu  aero_solver_c_api.cu  aero_table_gen.cpp
src/aero_cfd/: cfd_residual.cpp  cfd_residual_gpu.cu  cfd_solver.cpp  cuda_utils.cpp  device_mesh.cu  diagnostics.cpp  gpu_buffers.cu  gpu_diagnostics.cu  gpu_rans.cu  gpu_solver.cu  gpu_timestep.cu  gpu_update.cu  gpu_viscous.cu  gpu_wall.cu  mesh_metrics.cpp  rans.cpp  reconstruction.cpp  reconstruction_gpu.cu  viscous.cpp
src/aero_solver/: aero_solver.cu  aero_solver_c_api.cu  cfd_solver.cu  mesh_generator.cpp
src/config/: CMakeLists.txt  missile_config.cpp
src/infra/: CMakeLists.txt
src/sim/: CMakeLists.txt
src/sim/atmosphere/: atmosphere_model.cu
src/sim/coord/: coordinate_transform.cu
src/sim/dynamics/: dynamics_6dof.cu
src/sim/gravity/: gravity_model.cu
tests/: CMakeLists.txt  compare_atm.cpp  test_aero.cpp  test_aero_table_gen.cpp  test_aero_viscous.cu  test_autopilot.cpp  test_cfd_ns.cpp  test_fvm_solver.cu  test_gravity.cu  test_guidance.cpp  test_integrator.cpp  test_launch.cpp  test_mesh_generator.cpp  test_propulsion.cpp
tests/cfd/: test_cfd_diagnostics.cpp  test_cfd_euler.cpp  test_cfd_gpu.cpp  test_cfd_mesh.cpp  test_cfd_reconstruction.cpp  test_cfd_viscous.cpp  test_gpu_topology.cpp  test_oracle_fp64.cpp
tests/ref_data/: flat_plate_laminar_ref.hpp  flat_plate_turbulent_ref.hpp  hemi_cylinder_ref.hpp  normal_shock_cea_ref.hpp  sphere_heatflux_ref.hpp
